[package]
name = "fen2image"
version = "0.1.0"
authors = ["clemkeirua <clement@keiruaprod.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
structopt = { version = "0.3", default-features = false }
